--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
 		"test": "jest",
 		"test:watch": "jest --watch",
 		"test:coverage": "jest --coverage",
-		"test:node": "node scripts/test-node.js"
+		"test:node": "node scripts/test-node.js",
+		"test:memory": "node scripts/test-memory-transfer.js"
 	},
 	"files": [
 		"dist"
