--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "n8n-nodes-site-to-site-file-transfer",
-	"version": "1.0.8",
+	"version": "1.0.9",
 	"description": "n8n node for streaming file transfers between URLs without loading files into memory",
 	"keywords": [
 		"n8n-community-node-package",
@@ -14,7 +14,7 @@
 	"license": "MIT",
 	"repository": {
 		"type": "git",
-		"url": "git@github.com:MikaelX/n8n-nodes-site-to-site-file-transfer.git"
+		"url": "https://github.com/MikaelX/n8n-nodes-site-to-site-file-transfer.git"
 	},
 	"main": "index.js",
 	"scripts": {
